// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calendar year is 2021, and quarters start on January 1st 1`] = `
<div>
  <svg>
    <g
      class="intervals"
    >
      <path
        d="M0,-456A456,456,0,0,1,231.954,-392.598L81.387,-137.754A160,160,0,0,0,0,-160Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M231.954,-392.598A456,456,0,0,1,387.517,-240.347L135.971,-84.332A160,160,0,0,0,81.387,-137.754Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M387.517,-240.347A456,456,0,0,1,455.894,-9.811L159.963,-3.443A160,160,0,0,0,135.971,-84.332Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M455.894,-9.811A456,456,0,0,1,401.286,216.578L140.802,75.992A160,160,0,0,0,159.963,-3.443Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M401.286,216.578A456,456,0,0,1,235.324,390.587L82.57,137.048A160,160,0,0,0,140.802,75.992Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M235.324,390.587A456,456,0,0,1,11.773,455.848L4.131,159.947A160,160,0,0,0,82.57,137.048Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M11.773,455.848A456,456,0,0,1,-221.74,398.456L-77.804,139.809A160,160,0,0,0,4.131,159.947Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-221.74,398.456A456,456,0,0,1,-393.593,230.262L-138.103,80.794A160,160,0,0,0,-77.804,139.809Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-393.593,230.262A456,456,0,0,1,-455.962,5.887L-159.987,2.066A160,160,0,0,0,-138.103,80.794Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-455.962,5.887A456,456,0,0,1,-395.56,-226.866L-138.793,-79.602A160,160,0,0,0,-159.987,2.066Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-395.56,-226.866A456,456,0,0,1,-231.954,-392.598L-81.387,-137.754A160,160,0,0,0,-138.793,-79.602Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-231.954,-392.598A456,456,0,0,1,0,-456L0,-160A160,160,0,0,0,-81.387,-137.754Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on July 1st 1`] = `
<div>
  <svg>
    <g
      class="intervals"
    >
      <path
        d="M0,-456A456,456,0,0,1,231.954,-392.598L81.387,-137.754A160,160,0,0,0,0,-160Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M231.954,-392.598A456,456,0,0,1,399.407,-220.024L140.143,-77.201A160,160,0,0,0,81.387,-137.754Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M399.407,-220.024A456,456,0,0,1,455.962,5.887L159.987,2.066A160,160,0,0,0,140.143,-77.201Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M455.962,5.887A456,456,0,0,1,389.571,237.003L136.692,83.159A160,160,0,0,0,159.987,2.066Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M389.571,237.003A456,456,0,0,1,221.74,398.456L77.804,139.809A160,160,0,0,0,136.692,83.159Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M221.74,398.456A456,456,0,0,1,-11.773,455.848L-4.131,159.947A160,160,0,0,0,77.804,139.809Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-11.773,455.848A456,456,0,0,1,-242.013,386.479L-84.917,135.607A160,160,0,0,0,-4.131,159.947Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-242.013,386.479A456,456,0,0,1,-393.593,230.262L-138.103,80.794A160,160,0,0,0,-84.917,135.607Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-393.593,230.262A456,456,0,0,1,-455.996,-1.962L-159.999,-0.689A160,160,0,0,0,-138.103,80.794Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-455.996,-1.962A456,456,0,0,1,-395.56,-226.866L-138.793,-79.602A160,160,0,0,0,-159.999,-0.689Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-395.56,-226.866A456,456,0,0,1,-225.162,-396.533L-79.004,-139.134A160,160,0,0,0,-138.793,-79.602Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
      <path
        d="M-225.162,-396.533A456,456,0,0,1,0,-456L0,-160A160,160,0,0,0,-79.004,-139.134Z"
        fill="url(#dummy_gradient)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;
